# cos-c-sdk

./: CMakeLists.txt  README.md
3rd-libs/lib/: libapr-1.lib  libapr.lib  libapriconv-1.lib  libapriconv.lib  libaprutil-1.lib  libaprutil.lib
cos_c_sdk/: aos_define.h  aos_status.c  aos_status.h  aos_string.c  aos_string.h  aos_transport.c  aos_util.c  aos_util.h  cos_api.h  cos_auth.c  cos_auth.h  cos_bucket.c  cos_define.c  cos_define.h  cos_json.c  cos_json.h  cos_multipart.c  cos_object.c  cos_sha256.c  cos_sha256.h  cos_util.c  cos_util.h  cos_xml.c  cos_xml.h
cos_c_sdk_sample/: CMakeLists.txt  cos_config.c  cos_config.h  cos_delete_object_sample.c  cos_get_object_sample.c  cos_head_object_sample.c  cos_multipart_upload_sample.c  cos_put_object_sample.c  cos_sample_util.c  cos_sample_util.h  main.c
cos_c_sdk_test/: CMakeLists.txt  cos_config.c  cos_config.h  cos_test_util.c  cos_test_util.h  test.h  test_all.c  test_aos.c  test_cos_bucket.c  test_cos_multipart.c  test_cos_object.c
